tests/errors/bad_member.HC
//ERR: no member 'nope' in class 'CPt'
class CPt { I64 x,y; };
CPt p;
p.nope=1;
